--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url(./vendor/normalize.css);
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url(./blocks/page/page.css);
+@import url(./blocks/content/content.css);
+@import url(./blocks/header/header.css);
+@import url(./blocks/promo/promo.css);
+@import url(./blocks/greeting/greeting.css);
+@import url(./blocks/about/about.css);
+@import url(./blocks/event/event.css);
+@import url(./blocks/footer/footer.css);
+
+@import url(./blocks/navigation/navigation.css);
+@import url(./blocks/navigation/__btn/navigation__btn.css);
+@import url(./blocks/navigation/__list/navigation__list.css);
+@import url(./blocks/navigation/__link/navigation__link.css);
+
+@import url(./blocks/link/link.css);
+@import url(./blocks/cursor/cursor.css);
