feat: разработан основной функционал сайта

--- a/src/blocks/about/about.css
+++ b/src/blocks/about/about.css
@@ -1,47 +1,169 @@
 .about {
+  margin: 200px auto 100px;
+  padding: 0;
+  /* width: 100%; */
   max-width: 1140px;
   width: 89%;
-  margin: 0 auto;
-  padding: 150px 0 0;
-  display: flex;
-  gap: 40px;
 }
 
 .about__title {
-  font-weight: 400;
-  font-size: 30px;
+  /* max-width: 1140px; */
+  /* width: 89%; */
+  font-weight: 100;
+  font-size: 55px;
   line-height: 1.2;
-  margin: 0;
+  margin: 0 auto;
+}
+
+.about__container {
+  display: flex;
+  gap: 40px;
+  margin: 100px auto 0;
+  /* margin: 0 auto 400px; */
 }
 
 .about__box {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  justify-content: center;
+  width: 50%;
+  /* position: relative; */
+}
+
+.about__box:last-of-type {
+  /* width: 39%; */
+  /* max-width: 570px; */
+  /* margin: 50px 0 0; */
 }
 
 .about__img {
-  width: 50%;
-  object-fit: cover;
+  background: url("../../images/about__photo1.png") no-repeat center;
+  /* background-size: 100% auto; */
+  background-size: auto 100%;
+  width: 100%;
+  height: 100%;
+  /* height: 1000px; */
+  /* object-fit: cover; */
+  /* position: absolute; */
+  /* z-index: 0; */
+  /* top: 0; */
+  /* left: 0; */
+}
+
+.about__text_type_img {
+  /* position: absolute; */
+  top: 455px;
+  /* right: 0%; */
+  left: 40%;
 }
 
 .about__text {
-  font-weight: 400;
+  font-weight: 100;
   font-size: 18px;
   line-height: 1.4;
   margin: 0 auto;
-  /* width: 100%; */
 }
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (min-width: 1454px) {
+  .about__box:last-of-type {
+    margin: 120px 0 0;
+  }
+
+  .about__img {
+    height: 1000px;
+  }
+
+  .about__text_type_img {
+    top: 500px;
+  }
+} */
+
+@media screen and (max-width: 1060px) {
   .about {
+    /* padding-top: 200px; */
     width: 92.18%;
+  }
+
+  .about__title {
+    /* width: 92.18%; */
+    /* margin-bottom: 50px; */
+  }
+
+  .about__container {
+    /* margin-bottom: 200px; */
+  }
+
+  /* .about__box:last-of-type {
+    width: 42.18%;
+    margin-top: 5px;
+    justify-content: end;
+    height: 330px;
+    gap: 15px;
+  } */
+
+  .about__img {
+    /* height: 800px; */
+  }
+
+  .about__text_type_img {
+    /* top: 340px; */
+  }
+
+  .about__text {
+    font-size: 15px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 885px) {
   .about {
+    /* padding-top: 150px; */
     width: 91.11%;
+  }
+
+  .about__title {
+    /* width: 91.11%; */
+    font-size: 35px;
+  }
+
+  .about__container {
+    margin: 50px 0 150px;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .about__box {
+    width: 100%;
+    gap: 15px;
+  }
+
+  /* .about__box:last-of-type {
+    width: 91.11%;
+    justify-content: start;
+    height: auto;
+    align-self: center;
+    order: -1;
+    gap: 20px;
+    margin: 0;
+  } */
+
+  .about__img {
+    /* background: url("../../images/about__photo1.png") no-repeat center; */
+    /* position: static; */
+    background-size: auto 100%;
+    height: 400px;
+  }
+
+  .about__text_type_img {
+    /* position: static; */
+  }
+
+  .about__text {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .about__img {
+    height: 280px;
   }
 }
