--- a/src/blocks/greeting/greeting.css
+++ b/src/blocks/greeting/greeting.css
@@ -2,42 +2,72 @@
   max-width: 1140px;
   width: 89%;
   margin: 0 auto;
-  padding: 456px 0 0;
-  display: flex;
-  /* flex-direction: column; */
-  gap: 30px;
+  padding: 1162px 0 0;
 }
 
 .greeting__title {
-  font-weight: 400;
+  position: relative;
+  font-weight: 200;
   font-size: 30px;
   line-height: 1.2;
+  margin: 0 auto 50px;
+  text-align: center;
 }
 
-.greeting__text {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.2;
-  margin: 15px auto 0;
+.greeting__img {
+  width: 100%;
+  height: 100%;
+}
+
+.greeting__btns {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  /* align-items: center; */
+  margin: 20px 0 0;
+  gap: 20px;
 }
 
 .greeting__box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 32%;
+  gap: 20px;
+}
+
+.greeting__box:first-of-type {
+  justify-content: end;
+  align-items: end;
+}
+
+.greeting__box:last-of-type {
+  width: 68%;
+}
+
+.greeting__text {
+  font-weight: 100;
+  font-size: 15px;
+  line-height: 1.3;
+  margin: 0;
+  max-width: 670px;
+  border: 1px dashed #fff;
+  padding: 10px 20px;
+  border-radius: 20px;
 }
 
 .greeting__btn {
   border: none;
   background-color: rgba(0, 0, 0, 0);
   border: 1px solid #fff;
-  padding: 20px;
+  padding: 13px;
+  border-radius: 20px;
   color: #ffffff;
+  margin: 0;
+  display: block;
+  font-size: 14px;
+  font-weight: 300;
 }
-
-/* .greeting__btn::before {
-  background-size: 100% auto;
-  background: url("../../images/greeting__show-btn.png") no-repeat center;
-  width: 200px;
-  height: 50px;
-} */
 
 .greeting__text_type_hidden {
   display: none;
@@ -50,11 +80,38 @@
 @media screen and (max-width: 1024px) {
   .greeting {
     width: 92.18%;
+    padding-top: 800px;
+  }
+
+  .greeting__title {
+    font-size: 20px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .greeting {
     width: 91.11%;
+    padding-top: 700px;
+  }
+
+  .greeting__title {
+    max-width: 437px;
+    font-size: 18px;
+  }
+
+  .greeting__btns {
+    gap: 10px;
+  }
+
+  .greeting__box {
+    width: 38%;
+  }
+
+  .greeting__box:last-of-type {
+    width: 62%;
+  }
+
+  .greeting__btn {
+    font-size: 13px;
   }
 }
