--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -9,11 +9,12 @@
   border-bottom: 0.5px solid #fff;
   position: fixed;
   z-index: 99;
+  box-sizing: border-box;
 }
 
 .header__logo {
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 42px;
 }
 
 .header__list {
@@ -23,9 +24,9 @@
 }
 
 .header__link {
-  font-size: 13px;
+  font-size: 15px;
   line-height: 1.3;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 .header__menu {
@@ -55,7 +56,9 @@
 @media screen and (max-width: 767px) {
   .header {
     width: 91.11%;
+    min-width: 300px;
     padding: 14px 0;
+    justify-content: space-between;
   }
 
   .header__list {
