--- a/src/blocks/navigation/navigation.css
+++ b/src/blocks/navigation/navigation.css
@@ -6,7 +6,8 @@
   .navigation {
     display: block;
     width: 67.7%;
-    background-color: #202020;
+    /* background-color: #1f2935; */
+    background-color: #08121b;
     z-index: 99;
     height: 100vh;
     position: fixed;
@@ -17,6 +18,7 @@
 
 @media screen and (max-width: 767px) {
   .navigation {
-    width: 100%;
+    width: 100vw;
+    left: 0;
   }
 }
